-- MVA procurement workflow persistence target tables.
-- Apply after procurement-prototype/db/schema.sql.

CREATE TABLE IF NOT EXISTS schema_migrations (
  version VARCHAR(80) PRIMARY KEY,
  description VARCHAR(240) NOT NULL,
  applied_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS request_packages (
  id VARCHAR(96) PRIMARY KEY,
  package_code VARCHAR(120) NOT NULL UNIQUE,
  request_type VARCHAR(40) NOT NULL DEFAULT 'standard',
  created_by_user_id VARCHAR(64) NOT NULL,
  demand_department VARCHAR(120) NOT NULL,
  project_family VARCHAR(40),
  project_code VARCHAR(80),
  project_name VARCHAR(160),
  need_date DATE,
  status VARCHAR(40) NOT NULL DEFAULT 'draft',
  current_stage VARCHAR(80) NOT NULL DEFAULT 'requester_draft',
  pending_owner_role VARCHAR(40),
  pending_owner_user_id VARCHAR(64),
  submitted_at TIMESTAMP NULL,
  received_at TIMESTAMP NULL,
  stage_start_at TIMESTAMP NULL,
  closed_at TIMESTAMP NULL,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_request_packages_creator (created_by_user_id),
  INDEX idx_request_packages_pending_user (pending_owner_user_id),
  INDEX idx_request_packages_status_stage (status, current_stage),
  INDEX idx_request_packages_scope (project_family, project_code, demand_department),
  CONSTRAINT fk_request_packages_creator FOREIGN KEY (created_by_user_id) REFERENCES users(id),
  CONSTRAINT fk_request_packages_pending_user FOREIGN KEY (pending_owner_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS request_items (
  id VARCHAR(96) PRIMARY KEY,
  request_package_id VARCHAR(96) NOT NULL,
  line_no INT NOT NULL,
  item_id VARCHAR(96),
  material_id VARCHAR(96),
  item_name VARCHAR(240) NOT NULL,
  item_spec TEXT,
  item_category VARCHAR(120),
  demand_type VARCHAR(40) NOT NULL DEFAULT 'mfg',
  total_requested_qty DECIMAL(18,4) NOT NULL DEFAULT 0,
  estimate_currency VARCHAR(3),
  estimate_unit_price DECIMAL(18,4),
  estimate_unit_price_usd DECIMAL(18,4),
  estimate_reason VARCHAR(500),
  status VARCHAR(40) NOT NULL DEFAULT 'draft',
  created_by_user_id VARCHAR(64) NOT NULL,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uq_request_items_package_line (request_package_id, line_no),
  INDEX idx_request_items_package (request_package_id),
  INDEX idx_request_items_item (item_id),
  INDEX idx_request_items_material (material_id),
  INDEX idx_request_items_status (status),
  CONSTRAINT fk_request_items_package FOREIGN KEY (request_package_id) REFERENCES request_packages(id),
  CONSTRAINT fk_request_items_item FOREIGN KEY (item_id) REFERENCES item_master(id),
  CONSTRAINT fk_request_items_material FOREIGN KEY (material_id) REFERENCES material_identity(id),
  CONSTRAINT fk_request_items_creator FOREIGN KEY (created_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS request_demand_lines (
  id VARCHAR(96) PRIMARY KEY,
  request_item_id VARCHAR(96) NOT NULL,
  line_no INT NOT NULL,
  demand_type VARCHAR(40) NOT NULL DEFAULT 'mfg',
  project_code VARCHAR(80),
  line_code VARCHAR(80),
  phase_code VARCHAR(40),
  station_or_unit VARCHAR(120) NOT NULL,
  quantity DECIMAL(18,4) NOT NULL DEFAULT 0,
  need_date DATE,
  remark VARCHAR(500),
  status VARCHAR(40) NOT NULL DEFAULT 'active',
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uq_request_demand_lines_item_line (request_item_id, line_no),
  INDEX idx_request_demand_lines_item (request_item_id),
  INDEX idx_request_demand_lines_phase_station (phase_code, station_or_unit),
  INDEX idx_request_demand_lines_scope (project_code, line_code, phase_code),
  CONSTRAINT fk_request_demand_lines_item FOREIGN KEY (request_item_id) REFERENCES request_items(id)
);

CREATE TABLE IF NOT EXISTS item_master_requests (
  id VARCHAR(96) PRIMARY KEY,
  request_item_id VARCHAR(96) NOT NULL,
  proposed_normalized_item_key VARCHAR(255) NOT NULL,
  proposed_eng_name VARCHAR(240) NOT NULL,
  proposed_cn_eng_name VARCHAR(240) NOT NULL,
  proposed_vn_name VARCHAR(240) NOT NULL,
  proposed_spec TEXT NOT NULL,
  structured_spec_json JSON,
  proposed_category VARCHAR(120) NOT NULL,
  proposed_uom VARCHAR(40) NOT NULL,
  requester_reason VARCHAR(1000) NOT NULL,
  estimate_currency VARCHAR(3) NOT NULL,
  estimate_unit_price DECIMAL(18,4) NOT NULL,
  estimate_reason VARCHAR(1000) NOT NULL,
  duplicate_candidates_json JSON,
  duplicate_difference VARCHAR(1000),
  evidence_reference VARCHAR(1000),
  status VARCHAR(40) NOT NULL DEFAULT 'pending_dept_dri_review',
  dept_dri_decision VARCHAR(40),
  master_review_decision VARCHAR(40),
  approved_item_id VARCHAR(96),
  merged_item_id VARCHAR(96),
  decided_by_user_id VARCHAR(64),
  decided_at TIMESTAMP NULL,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_item_master_requests_item (request_item_id),
  INDEX idx_item_master_requests_key (proposed_normalized_item_key),
  INDEX idx_item_master_requests_status (status),
  CONSTRAINT fk_item_master_requests_request_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_item_master_requests_approved_item FOREIGN KEY (approved_item_id) REFERENCES item_master(id),
  CONSTRAINT fk_item_master_requests_merged_item FOREIGN KEY (merged_item_id) REFERENCES item_master(id),
  CONSTRAINT fk_item_master_requests_decider FOREIGN KEY (decided_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS approvals (
  id VARCHAR(96) PRIMARY KEY,
  request_package_id VARCHAR(96) NOT NULL,
  request_item_id VARCHAR(96),
  approval_stage VARCHAR(80) NOT NULL,
  approval_role VARCHAR(40) NOT NULL,
  decision VARCHAR(40) NOT NULL DEFAULT 'pending',
  decision_reason VARCHAR(1000),
  decided_by_user_id VARCHAR(64),
  decided_at TIMESTAMP NULL,
  previous_stage VARCHAR(80),
  next_stage VARCHAR(80),
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_approvals_package (request_package_id),
  INDEX idx_approvals_item (request_item_id),
  INDEX idx_approvals_stage_decision (approval_stage, decision),
  INDEX idx_approvals_decider (decided_by_user_id),
  CONSTRAINT fk_approvals_package FOREIGN KEY (request_package_id) REFERENCES request_packages(id),
  CONSTRAINT fk_approvals_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_approvals_decider FOREIGN KEY (decided_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS pas_quotes (
  id VARCHAR(96) PRIMARY KEY,
  request_item_id VARCHAR(96) NOT NULL,
  entered_by_user_id VARCHAR(64) NOT NULL,
  pas_demand_no VARCHAR(120),
  pas_material_no VARCHAR(120),
  factory_material_no VARCHAR(120),
  vendor_name VARCHAR(200),
  quote_currency VARCHAR(3) NOT NULL,
  quote_unit_price DECIMAL(18,4) NOT NULL,
  quote_unit_price_usd DECIMAL(18,4),
  quote_date DATE NOT NULL,
  quote_received_date DATE NOT NULL,
  valid_until DATE,
  quote_status VARCHAR(40) NOT NULL DEFAULT 'received',
  screenshot_attachment_id VARCHAR(96),
  excel_attachment_id VARCHAR(96),
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_pas_quotes_item (request_item_id),
  INDEX idx_pas_quotes_entered_by (entered_by_user_id),
  INDEX idx_pas_quotes_demand_no (pas_demand_no),
  INDEX idx_pas_quotes_valid_until (valid_until),
  CONSTRAINT fk_pas_quotes_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_pas_quotes_entered_by FOREIGN KEY (entered_by_user_id) REFERENCES users(id),
  CONSTRAINT fk_pas_quotes_screenshot FOREIGN KEY (screenshot_attachment_id) REFERENCES attachments(id),
  CONSTRAINT fk_pas_quotes_excel FOREIGN KEY (excel_attachment_id) REFERENCES attachments(id)
);

CREATE TABLE IF NOT EXISTS exchange_rates (
  id VARCHAR(96) PRIMARY KEY,
  rate_date DATE NOT NULL,
  from_currency VARCHAR(3) NOT NULL,
  to_currency VARCHAR(3) NOT NULL DEFAULT 'USD',
  rate DECIMAL(18,8) NOT NULL,
  maintained_by_user_id VARCHAR(64) NOT NULL,
  source_note VARCHAR(500),
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uq_exchange_rates_pair_date (rate_date, from_currency, to_currency),
  INDEX idx_exchange_rates_maintainer (maintained_by_user_id),
  CONSTRAINT fk_exchange_rates_maintainer FOREIGN KEY (maintained_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS price_decisions (
  id VARCHAR(96) PRIMARY KEY,
  request_item_id VARCHAR(96) NOT NULL,
  pas_quote_id VARCHAR(96),
  history_unit_price_usd DECIMAL(18,4),
  quote_unit_price_usd DECIMAL(18,4),
  unit_price_delta_usd DECIMAL(18,4),
  threshold_usd DECIMAL(18,4) NOT NULL DEFAULT 0.4000,
  decision_type VARCHAR(40) NOT NULL DEFAULT 'pending',
  decision_reason VARCHAR(1000),
  requires_dept_dri_review TINYINT(1) NOT NULL DEFAULT 0,
  requires_budget_approval TINYINT(1) NOT NULL DEFAULT 0,
  decided_by_user_id VARCHAR(64),
  decided_at TIMESTAMP NULL,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_price_decisions_item (request_item_id),
  INDEX idx_price_decisions_quote (pas_quote_id),
  INDEX idx_price_decisions_type (decision_type),
  CONSTRAINT fk_price_decisions_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_price_decisions_quote FOREIGN KEY (pas_quote_id) REFERENCES pas_quotes(id),
  CONSTRAINT fk_price_decisions_decider FOREIGN KEY (decided_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS exports (
  id VARCHAR(96) PRIMARY KEY,
  export_package_code VARCHAR(160) NOT NULL UNIQUE,
  request_package_id VARCHAR(96),
  request_item_id VARCHAR(96),
  exported_by_user_id VARCHAR(64) NOT NULL,
  cost_type VARCHAR(80),
  cfa_target VARCHAR(120),
  ecs_target VARCHAR(120),
  export_status VARCHAR(40) NOT NULL DEFAULT 'exported',
  exported_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_exports_package (request_package_id),
  INDEX idx_exports_item (request_item_id),
  INDEX idx_exports_exported_by (exported_by_user_id),
  INDEX idx_exports_status (export_status),
  CONSTRAINT fk_exports_package FOREIGN KEY (request_package_id) REFERENCES request_packages(id),
  CONSTRAINT fk_exports_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_exports_exported_by FOREIGN KEY (exported_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS buyer_handoff_events (
  id VARCHAR(96) PRIMARY KEY,
  export_id VARCHAR(96) NOT NULL,
  request_package_id VARCHAR(96),
  request_item_id VARCHAR(96),
  event_type VARCHAR(80) NOT NULL,
  event_status VARCHAR(40) NOT NULL DEFAULT 'open',
  actor_user_id VARCHAR(64),
  pr_no VARCHAR(120),
  po_no VARCHAR(120),
  evidence_attachment_id VARCHAR(96),
  notes VARCHAR(1000),
  event_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  INDEX idx_buyer_handoff_export (export_id),
  INDEX idx_buyer_handoff_item (request_item_id),
  INDEX idx_buyer_handoff_status (event_status),
  INDEX idx_buyer_handoff_actor (actor_user_id),
  CONSTRAINT fk_buyer_handoff_export FOREIGN KEY (export_id) REFERENCES exports(id),
  CONSTRAINT fk_buyer_handoff_package FOREIGN KEY (request_package_id) REFERENCES request_packages(id),
  CONSTRAINT fk_buyer_handoff_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_buyer_handoff_actor FOREIGN KEY (actor_user_id) REFERENCES users(id),
  CONSTRAINT fk_buyer_handoff_evidence FOREIGN KEY (evidence_attachment_id) REFERENCES attachments(id)
);

CREATE TABLE IF NOT EXISTS warehouse_inventory_transactions (
  id VARCHAR(96) PRIMARY KEY,
  parent_transaction_id VARCHAR(96),
  transaction_type VARCHAR(40) NOT NULL,
  item_id VARCHAR(96),
  material_id VARCHAR(96),
  item_name VARCHAR(240) NOT NULL,
  item_spec TEXT,
  item_owner VARCHAR(40) NOT NULL,
  source_project VARCHAR(80),
  source_line VARCHAR(80),
  source_stage VARCHAR(80),
  source_station_or_unit VARCHAR(120),
  target_project VARCHAR(80),
  target_line VARCHAR(80),
  target_stage VARCHAR(80),
  target_station_or_unit VARCHAR(120),
  quantity DECIMAL(18,4) NOT NULL,
  transaction_status VARCHAR(40) NOT NULL DEFAULT 'pending',
  created_by_user_id VARCHAR(64) NOT NULL,
  confirmed_by_user_id VARCHAR(64),
  confirmed_at TIMESTAMP NULL,
  reason VARCHAR(1000),
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_warehouse_parent (parent_transaction_id),
  INDEX idx_warehouse_item_owner (item_id, item_owner),
  INDEX idx_warehouse_material (material_id),
  INDEX idx_warehouse_type_status (transaction_type, transaction_status),
  INDEX idx_warehouse_created_by (created_by_user_id),
  INDEX idx_warehouse_confirmed_by (confirmed_by_user_id),
  CONSTRAINT fk_warehouse_parent FOREIGN KEY (parent_transaction_id) REFERENCES warehouse_inventory_transactions(id),
  CONSTRAINT fk_warehouse_item FOREIGN KEY (item_id) REFERENCES item_master(id),
  CONSTRAINT fk_warehouse_material FOREIGN KEY (material_id) REFERENCES material_identity(id),
  CONSTRAINT fk_warehouse_created_by FOREIGN KEY (created_by_user_id) REFERENCES users(id),
  CONSTRAINT fk_warehouse_confirmed_by FOREIGN KEY (confirmed_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS carryover_ledger (
  id VARCHAR(96) PRIMARY KEY,
  request_item_id VARCHAR(96) NOT NULL,
  source_request_item_id VARCHAR(96),
  ledger_type VARCHAR(40) NOT NULL DEFAULT 'candidate',
  candidate_qty DECIMAL(18,4) NOT NULL DEFAULT 0,
  effective_qty DECIMAL(18,4) NOT NULL DEFAULT 0,
  carryover_status VARCHAR(40) NOT NULL DEFAULT 'pending',
  created_by_user_id VARCHAR(64) NOT NULL,
  decided_by_user_id VARCHAR(64),
  decided_at TIMESTAMP NULL,
  reason VARCHAR(1000),
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  INDEX idx_carryover_request_item (request_item_id),
  INDEX idx_carryover_source_item (source_request_item_id),
  INDEX idx_carryover_status (carryover_status),
  INDEX idx_carryover_created_by (created_by_user_id),
  CONSTRAINT fk_carryover_request_item FOREIGN KEY (request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_carryover_source_item FOREIGN KEY (source_request_item_id) REFERENCES request_items(id),
  CONSTRAINT fk_carryover_created_by FOREIGN KEY (created_by_user_id) REFERENCES users(id),
  CONSTRAINT fk_carryover_decided_by FOREIGN KEY (decided_by_user_id) REFERENCES users(id)
);

CREATE TABLE IF NOT EXISTS requester_mappings (
  id VARCHAR(96) PRIMARY KEY,
  project_family VARCHAR(40) NOT NULL,
  project_code VARCHAR(80) NOT NULL,
  demand_department VARCHAR(120) NOT NULL,
  requester_user_id VARCHAR(64) NOT NULL,
  dept_dri_user_id VARCHAR(64) NOT NULL,
  cost_manager_user_id VARCHAR(64),
  active_scope_key VARCHAR(32) NULL DEFAULT 'active',
  effective_from DATE,
  effective_to DATE,
  metadata_json JSON,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  UNIQUE KEY uq_requester_mappings_active_scope (
    project_family,
    project_code,
    demand_department,
    requester_user_id,
    active_scope_key
  ),
  INDEX idx_requester_mappings_requester (requester_user_id),
  INDEX idx_requester_mappings_dept_dri (dept_dri_user_id),
  INDEX idx_requester_mappings_cost_manager (cost_manager_user_id),
  CONSTRAINT fk_requester_mappings_requester FOREIGN KEY (requester_user_id) REFERENCES users(id),
  CONSTRAINT fk_requester_mappings_dept_dri FOREIGN KEY (dept_dri_user_id) REFERENCES users(id),
  CONSTRAINT fk_requester_mappings_cost_manager FOREIGN KEY (cost_manager_user_id) REFERENCES users(id)
);

INSERT INTO schema_migrations (version, description)
VALUES ('001_target_workflow_tables', 'Target procurement workflow persistence tables')
ON DUPLICATE KEY UPDATE description = VALUES(description);
